--- a/src/app/action-bar/styles.module.css
+++ b/src/app/action-bar/styles.module.css
@@ -1,15 +1,15 @@
 .actionsBar {
   position: fixed;
-  bottom: 5vh;
+  bottom: 3vh;
   left: 0;
   right: 0;
   border-radius: 20px;
-  width: min(90vw, max(1000px, 50vw));
-  height: 70px;
+  width: min(90vw, 800px);
+  height: 80px;
   margin: auto;
   display: flex;
-  justify-content: center;
-  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: space-evenly;
+  background-color: rgba(255, 255, 255, 0.057);
   backdrop-filter: blur(10px);
   z-index: 1;
   border: none;
@@ -32,4 +32,119 @@
 .actionsBar button:hover {
   transform: translateY(-2px);
   box-shadow: 0 5px 5px rgba(255, 255, 255, 0.1);
+}
+
+.slider {
+  width: 300px;
+  display: flex;
+  flex-direction: row;
+  font-size: 1.5rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.sliderNumber {
+  width: 4rem;
+  text-align: right;
+  font-size: 1.2rem;
+  border: none;
+  height: 2rem;
+  border-radius: 0.5rem;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.slider input {
+  color: white;
+}
+
+.slider input[type="range"] {
+  background: none;
+  height: 17px;
+  -webkit-appearance: none;
+  margin: 10px 0;
+  width: 100%;
+  padding: 0 0.5rem;
+}
+.slider input[type="range"]:focus {
+  outline: none;
+}
+.slider input[type="range"]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 6px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 1px 1px 1px #000000;
+  background: #ffffff88;
+  border-radius: 9px;
+  border: 0px solid #010101;
+}
+.slider input[type="range"]::-webkit-slider-thumb {
+  box-shadow: 1px 1px 1px #000031;
+  border: 0px solid #ffffff;
+  height: 10px;
+  width: 10px;
+  border-radius: 10px;
+  background: #ffffff;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -2px;
+}
+.slider input[type="range"]:focus::-webkit-slider-runnable-track {
+  background: #ffffff88;
+}
+.slider input[type="range"]::-moz-range-track {
+  width: 100%;
+  height: 6px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 1px 1px 1px #000000;
+  background: #ffffff88;
+  border-radius: 9px;
+  border: 0px solid #010101;
+}
+.slider input[type="range"]::-moz-range-thumb {
+  box-shadow: 1px 1px 1px #000031;
+  border: 0px solid #ffffff;
+  height: 10px;
+  width: 10px;
+  border-radius: 10px;
+  background: #ffffff;
+  cursor: pointer;
+}
+.slider input[type="range"]::-ms-track {
+  width: 100%;
+  height: 6px;
+  cursor: pointer;
+  animate: 0.2s;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+.slider input[type="range"]::-ms-fill-lower {
+  background: #ffffff88;
+  border: 0px solid #010101;
+  border-radius: 18px;
+  box-shadow: 1px 1px 1px #000000;
+}
+.slider input[type="range"]::-ms-fill-upper {
+  background: #ffffff88;
+  border: 0px solid #010101;
+  border-radius: 18px;
+  box-shadow: 1px 1px 1px #000000;
+}
+.slider input[type="range"]::-ms-thumb {
+  margin-top: 1px;
+  box-shadow: 1px 1px 1px #000031;
+  border: 0px solid #ffffff;
+  height: 10px;
+  width: 10px;
+  border-radius: 10px;
+  background: #ffffff;
+  cursor: pointer;
+}
+.slider input[type="range"]:focus::-ms-fill-lower {
+  background: #ffffff;
+}
+.slider input[type="range"]:focus::-ms-fill-upper {
+  background: #ffffff;
 }
