--- a/src/app/components/grid/styles.module.css
+++ b/src/app/components/grid/styles.module.css
@@ -3,6 +3,20 @@
   grid-template-columns: repeat(var(--width), 30px);
   grid-template-rows: repeat(var(--height), 30px);
   gap: 2px;
+  border: rgba(255, 255, 255, 0.101) 2px solid;
+  background: linear-gradient(to right, #3e3e3e, #262626, #3e3e3e);
+  background-size: 200%;
+  animation: grid-wave 3s infinite linear;
+}
+
+@keyframes grid-wave {
+  from {
+    background-position: 0% center;
+  }
+
+  to {
+    background-position: -200% center;
+  }
 }
 
 .row {
