--- a/src/app/components/grid/styles.module.css
+++ b/src/app/components/grid/styles.module.css
@@ -4,7 +4,13 @@
   grid-template-rows: repeat(var(--height), 30px);
   gap: 2px;
   border: rgba(255, 255, 255, 0.101) 2px solid;
-  background: linear-gradient(to right, #3e3e3e, #262626, #3e3e3e);
+  background: linear-gradient(
+    to right,
+    #3e3e3e 0%,
+    #262626 40%,
+    #262626 60%,
+    #3e3e3e 100%
+  );
   background-size: 200%;
   animation: grid-wave 3s infinite linear;
 }
